--- a/@extDB3/sql_custom/altis-life-custom.ini
+++ b/@extDB3/sql_custom/altis-life-custom.ini
@@ -76,8 +76,8 @@ SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
 ;;--------------------------------------------------------------
 [playerCivInfo]
 ;;              1          2     3      4          5           6           7             8        9             10         11           12         13
-SQL1_1 = SELECT playerid, name, cash, bankacc, adminlevel, donatorlevel, civ_licenses, arrested, civ_gear, civ_stats, civ_alive, civ_position, playtime FROM players WHERE playerid=?;
+SQL1_1 = SELECT playerid, name, cash, bankacc, adminlevel, donorlevel, civ_licenses, arrested, civ_gear, civ_stats, civ_alive, civ_position, playtime FROM players WHERE playerid=?;
 SQL1_INPUTS = 1
 
-OUTPUT = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12
+OUTPUT = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13
 ;;--------------------------------------------------------------
