Player Updates/Inserts Added

--- a/@extDB3/sql_custom/altis-life-custom.ini
+++ b/@extDB3/sql_custom/altis-life-custom.ini
@@ -44,7 +44,6 @@ SQL1_INPUTS = 1
 Prepared Statement = false
 
 ;;--------------------------------------------------------------
-
 [deleteOldContainers]
 
 SQL1_1 = CALL deleteOldGangs;
@@ -61,7 +60,7 @@ Prepared Statement = false
 ;;Inserts / Updates
 ;;--------------------------------------------------------------
 [playerInsert]
-;;
+;;Used to insert player.
 
 SQL1_1 = INSERT INTO players 
 ;;				1          2 	 3     4        5        6             7             8             9         10        11
@@ -70,14 +69,159 @@ SQL1_3 = 		VALUES(?,?,?,?,?,?,?,?,?,?,?)
 
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
 ;;--------------------------------------------------------------
+[playerUpdateWest]
+;;Used to update cop information.
+
+SQL1_1 = UPDATE players
+;;					1          2 	    3          4           5                6			7			8
+SQL1_2 = 		SET name=?, cash=?, bankacc=?, cop_gear=?, cop_licenses=?, cop_stats=?, playtime=? WHERE playerid=?
+
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8
+;;-------------------------------------------------------------
+[playerUpdateCiv]
+;;Used to update civ information.
+
+SQL1_1 = UPDATE players
+;;					1          2 	    3          4              5             6			7			8			9				10				11
+SQL1_2 = 		SET name=?, cash=?, bankacc=?, civ_licenses=?, civ_gear=?, arrested=?, civ_stats=?, civ_alive=?, civ_position=?, playtime=? WHERE playerid=?
+
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 8, 10, 11
+;;-------------------------------------------------------------
+[playerUpdateMedic]
+;;Used to update medic information.
+
+SQL1_1 = UPDATE players
+;;					1          2 	    3          4              5             6			7			 8
+SQL1_2 = 		SET name=?, cash=?, bankacc=?, med_licenses=?, med_gear=?, med_stats=?, playtime=? WHERE playerid=?
+
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 8
+;;-------------------------------------------------------------
+
+;;Partial Updates
+;; All to be defined in fn_updatePartial.sqf
+;; vvvvvvvvvv
+
+;;-------------------------------------------------------------
+[playerUpdateCash]
+;;Updates players cash.
+
+SQL1_1 = UPDATE players
+;;					1         		 2 	    
+SQL1_2 = 		SET cash=? WHERE playerid=?
+
+SQL1_INPUTS = 1, 2
+;;-------------------------------------------------------------
+[playerUpdateBank]
+;;Updates players bank.
+
+SQL1_1 = UPDATE players
+;;					1         		 2 	    
+SQL1_2 = 		SET bankacc=? WHERE playerid=?
+
+SQL1_INPUTS = 1, 2
+;;-------------------------------------------------------------
+[playerUpdateLicensesWest]
+;;Updates cop licenses.
+
+SQL1_1 = UPDATE players
+;;					1         		 2 	    
+SQL1_2 = 		SET cop_licenses=? WHERE playerid=?
+
+SQL1_INPUTS = 1, 2
+;;-------------------------------------------------------------
+[playerUpdateLicensesCiv]
+;;Updates civ licenses.
+
+SQL1_1 = UPDATE players
+;;					1         		 2 	    
+SQL1_2 = 		SET civ_licenses=? WHERE playerid=?
+
+SQL1_INPUTS = 1, 2
+;;-------------------------------------------------------------
+[playerUpdateLicensesMedic]
+;;Updates med licenses.
+
+SQL1_1 = UPDATE players
+;;					1         		 2 	    
+SQL1_2 = 		SET med_licenses=? WHERE playerid=?
+
+SQL1_INPUTS = 1, 2
+;;-------------------------------------------------------------
+[playerUpdateGearWest]
+;;Updates cop gear.
+
+SQL1_1 = UPDATE players
+;;					1         		 2 	    
+SQL1_2 = 		SET cop_gear=? WHERE playerid=?
+
+SQL1_INPUTS = 1, 2
+;;-------------------------------------------------------------
+[playerUpdateGearCiv]
+;;Updates civ gear.
+
+SQL1_1 = UPDATE players
+;;					1         		 2 	    
+SQL1_2 = 		SET civ_gear=? WHERE playerid=?
+
+SQL1_INPUTS = 1, 2
+;;-------------------------------------------------------------
+[playerUpdateGearMedic]
+;;Updates med gear.
+
+SQL1_1 = UPDATE players
+;;					1         		 2 	    
+SQL1_2 = 		SET med_gear=? WHERE playerid=?
+
+SQL1_INPUTS = 1, 2
+;;-------------------------------------------------------------
+[playerUpdateCivPos]
+;;Updates civ position.
+
+SQL1_1 = UPDATE players
+;;					1         		 2 	    		3
+SQL1_2 = 		SET civ_alive=?, civ_position=? WHERE playerid=?
+
+SQL1_INPUTS = 1, 2, 3
+;;-------------------------------------------------------------
+[playerUpdateCivArrested]
+;;Updates arrested column.
+
+SQL1_1 = UPDATE players
+;;					1         		 2
+SQL1_2 = 		SET arrested=? WHERE playerid=?
+
+SQL1_INPUTS = 1, 2
+;;-------------------------------------------------------------
+[playerUpdateCash+Bank]
+;;Updates players cash and bank.
+
+SQL1_1 = UPDATE players
+;;					1         2				3
+SQL1_2 = 		SET cash=?, bankacc=? WHERE playerid=?
+
+SQL1_INPUTS = 1, 2, 3
+;;-------------------------------------------------------------
+
 
 
 ;;Selections
 ;;--------------------------------------------------------------
+[playerCheck]
+;;Used to check if players in the database.
+
+SQL1_1 = SELECT playerid, name FROM players WHERE playerid=?;
+SQL1_INPUTS = 1
+
+Number of Inputs = 1
+OUTPUT = 1, 2
+;;--------------------------------------------------------------
 [playerCivInfo]
-;;              1          2     3      4          5           6           7             8        9             10         11           12         13
+;;Used to return civilian information.
+
+;;			1          2     3      4          5           6           7             8        9             10         11           12         13
 SQL1_1 = SELECT playerid, name, cash, bankacc, adminlevel, donorlevel, civ_licenses, arrested, civ_gear, civ_stats, civ_alive, civ_position, playtime FROM players WHERE playerid=?;
 SQL1_INPUTS = 1
 
 OUTPUT = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13
 ;;--------------------------------------------------------------
+
