--- a/@extDB3/sql_custom/altis-life-custom.ini
+++ b/@extDB3/sql_custom/altis-life-custom.ini
@@ -60,7 +60,7 @@ Prepared Statement = false
 ;;Inserts / Updates
 ;;--------------------------------------------------------------
 [playerInsert]
-;;Used to insert player.
+
 
 SQL1_1 = INSERT INTO players 
 ;;				1          2 	 3     4        5        6             7             8             9         10        11
@@ -68,33 +68,34 @@ SQL1_2 = 		(playerid, name, cash, bankacc, aliases, cop_licenses, med_licenses, 
 SQL1_3 = 		VALUES(?,?,?,?,?,?,?,?,?,?,?)
 
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
+
 ;;--------------------------------------------------------------
 [playerUpdateWest]
-;;Used to update cop information.
 
 SQL1_1 = UPDATE players
 ;;					1          2 	    3          4           5                6			7			8
 SQL1_2 = 		SET name=?, cash=?, bankacc=?, cop_gear=?, cop_licenses=?, cop_stats=?, playtime=? WHERE playerid=?
 
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8
+
 ;;-------------------------------------------------------------
 [playerUpdateCiv]
-;;Used to update civ information.
 
 SQL1_1 = UPDATE players
 ;;					1          2 	    3          4              5             6			7			8			9				10				11
 SQL1_2 = 		SET name=?, cash=?, bankacc=?, civ_licenses=?, civ_gear=?, arrested=?, civ_stats=?, civ_alive=?, civ_position=?, playtime=? WHERE playerid=?
 
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 8, 10, 11
+
 ;;-------------------------------------------------------------
 [playerUpdateMedic]
-;;Used to update medic information.
 
 SQL1_1 = UPDATE players
 ;;					1          2 	    3          4              5             6			7			 8
 SQL1_2 = 		SET name=?, cash=?, bankacc=?, med_licenses=?, med_gear=?, med_stats=?, playtime=? WHERE playerid=?
 
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 8
+
 ;;-------------------------------------------------------------
 
 ;;Partial Updates
@@ -103,103 +104,103 @@ SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 8
 
 ;;-------------------------------------------------------------
 [playerUpdateCash]
-;;Updates players cash.
 
 SQL1_1 = UPDATE players
 ;;					1         		 2 	    
 SQL1_2 = 		SET cash=? WHERE playerid=?
 
 SQL1_INPUTS = 1, 2
+
 ;;-------------------------------------------------------------
 [playerUpdateBank]
-;;Updates players bank.
 
 SQL1_1 = UPDATE players
 ;;					1         		 2 	    
 SQL1_2 = 		SET bankacc=? WHERE playerid=?
 
 SQL1_INPUTS = 1, 2
+
 ;;-------------------------------------------------------------
 [playerUpdateLicensesWest]
-;;Updates cop licenses.
 
 SQL1_1 = UPDATE players
 ;;					1         		 2 	    
 SQL1_2 = 		SET cop_licenses=? WHERE playerid=?
 
 SQL1_INPUTS = 1, 2
+
 ;;-------------------------------------------------------------
 [playerUpdateLicensesCiv]
-;;Updates civ licenses.
 
 SQL1_1 = UPDATE players
 ;;					1         		 2 	    
 SQL1_2 = 		SET civ_licenses=? WHERE playerid=?
 
 SQL1_INPUTS = 1, 2
+
 ;;-------------------------------------------------------------
 [playerUpdateLicensesMedic]
-;;Updates med licenses.
 
 SQL1_1 = UPDATE players
 ;;					1         		 2 	    
 SQL1_2 = 		SET med_licenses=? WHERE playerid=?
 
 SQL1_INPUTS = 1, 2
+
 ;;-------------------------------------------------------------
 [playerUpdateGearWest]
-;;Updates cop gear.
 
 SQL1_1 = UPDATE players
 ;;					1         		 2 	    
 SQL1_2 = 		SET cop_gear=? WHERE playerid=?
 
 SQL1_INPUTS = 1, 2
+
 ;;-------------------------------------------------------------
 [playerUpdateGearCiv]
-;;Updates civ gear.
 
 SQL1_1 = UPDATE players
 ;;					1         		 2 	    
 SQL1_2 = 		SET civ_gear=? WHERE playerid=?
 
 SQL1_INPUTS = 1, 2
+
 ;;-------------------------------------------------------------
 [playerUpdateGearMedic]
-;;Updates med gear.
 
 SQL1_1 = UPDATE players
 ;;					1         		 2 	    
 SQL1_2 = 		SET med_gear=? WHERE playerid=?
 
 SQL1_INPUTS = 1, 2
+
 ;;-------------------------------------------------------------
 [playerUpdateCivPos]
-;;Updates civ position.
 
 SQL1_1 = UPDATE players
 ;;					1         		 2 	    		3
 SQL1_2 = 		SET civ_alive=?, civ_position=? WHERE playerid=?
 
 SQL1_INPUTS = 1, 2, 3
+
 ;;-------------------------------------------------------------
 [playerUpdateCivArrested]
-;;Updates arrested column.
 
 SQL1_1 = UPDATE players
 ;;					1         		 2
 SQL1_2 = 		SET arrested=? WHERE playerid=?
 
 SQL1_INPUTS = 1, 2
+
 ;;-------------------------------------------------------------
-[playerUpdateCash+Bank]
-;;Updates players cash and bank.
+[playerUpdateCash+Bank].
 
 SQL1_1 = UPDATE players
 ;;					1         2				3
 SQL1_2 = 		SET cash=?, bankacc=? WHERE playerid=?
 
 SQL1_INPUTS = 1, 2, 3
+
 ;;-------------------------------------------------------------
 
 
@@ -207,21 +208,163 @@ SQL1_INPUTS = 1, 2, 3
 ;;Selections
 ;;--------------------------------------------------------------
 [playerCheck]
-;;Used to check if players in the database.
 
 SQL1_1 = SELECT playerid, name FROM players WHERE playerid=?;
 SQL1_INPUTS = 1
 
 Number of Inputs = 1
 OUTPUT = 1, 2
+
+;;--------------------------------------------------------------
+[playerWestInfo]
+
+;;					1      2     3      4          5           6           7             8        9          10         11         12 
+SQL1_1 = SELECT playerid, name, cash, bankacc, adminlevel, donorlevel, cop_licenses, coplevel, cop_gear, blacklist, cop_stats, playtime FROM players WHERE playerid=?;
+SQL1_INPUTS = 1
+
+OUTPUT = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12
+
 ;;--------------------------------------------------------------
 [playerCivInfo]
-;;Used to return civilian information.
 
 ;;			1          2     3      4          5           6           7             8        9             10         11           12         13
 SQL1_1 = SELECT playerid, name, cash, bankacc, adminlevel, donorlevel, civ_licenses, arrested, civ_gear, civ_stats, civ_alive, civ_position, playtime FROM players WHERE playerid=?;
 SQL1_INPUTS = 1
 
 OUTPUT = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13
+
 ;;--------------------------------------------------------------
+[playerMedicInfo]
+
+;;					1       2    3	    4		  5			  6			   7			8			9			10		 11
+SQL1_1 = SELECT playerid, name, cash, bankacc, adminlevel, donorlevel, med_licenses, mediclevel, med_gear, med_stats, playtime FROM players WHERE playerid=?;
+
+SQL1_INPUTS = 1
+
+OUTPUT = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
+
+;;--------------------------------------------------------------
+
+;; ----------------------
+;;         Vehicles 
+;; ----------------------
+
+;;Inserts / Updates
+;;--------------------------------------------------------------
+[vehicleInsert]
+
+
+SQL1_1 = INSERT INTO vehicles 
+;;				  1        2       3     4     5       6       7         8      9     10     11
+SQL1_2 = 		(side, classname, type, pid, alive, active, inventory, color, plate, gear, damage) 
+SQL1_3 = 		VALUES(?,?,?,?,?,?,?,?,?,?,?)
+
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
+
+;;--------------------------------------------------------------
+;;Vehicle Storing Updates
+;;--------------------------------------------------------------
+[vehicleUpdateActive]
+
+SQL1_1 = UPDATE vehicles
+;;									1      2 	    3			4
+SQL1_2 = 		SET active='0', fuel=?, damage=? WHERE pid=? AND plate=?
+
+SQL1_INPUTS = 1, 2, 3, 4
+
+;;-------------------------------------------------------------
+[vehicleUpdateActive2]
+
+SQL1_1 = UPDATE vehicles
+;;									1     		 2 	    3
+SQL1_2 = 		SET active='1', damage=? WHERE pid=? AND id=?
+
+SQL1_INPUTS = 1, 2, 3
+
+;;-------------------------------------------------------------
+[vehicleUpdateBlacklist]
+;;Used in fn_spawnVehicle
+
+SQL1_1 = UPDATE vehicles
+;;						1         	2			3
+SQL1_2 = 		SET blacklist='0' WHERE id=? AND pid=?
+
+SQL1_INPUTS = 1, 2, 3
+
+;;-------------------------------------------------------------
+[vehicleUpdateBlacklist2]
+
+SQL1_1 = UPDATE vehicles
+;;									1         	2
+SQL1_2 = 		SET blacklist='1' WHERE pid=? AND plate=?
+
+SQL1_INPUTS = 1, 2
+
+;;-------------------------------------------------------------
+[vehicleUpdateStore]
+;;Update for storing vehicles.
+
+SQL1_1 = UPDATE vehicles
+;;									1          2 	  3        4        5            6        
+SQL1_2 = 		SET active='0', inventory=?, gear=?, fuel=?, damage=? WHERE pid=? AND plate=?
+
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6
+
+;;-------------------------------------------------------------
+[vehicleUpdateGear]
+
+SQL1_1 = UPDATE vehicles
+;;					  1            2          3
+SQL1_2 = 		SET gear=? WHERE pid=? AND plate=?
+
+SQL1_INPUTS = 1, 2, 3
+
+;;-------------------------------------------------------------
+[vehicleUpdateInventory]
+
+SQL1_1 = UPDATE vehicles
+;;					  1            2          3
+SQL1_2 = 		SET inventory=? WHERE pid=? AND plate=?
+
+SQL1_INPUTS = 1, 2, 3
+
+;;-------------------------------------------------------------
+[vehicleDelete]
+
+SQL1_1 = UPDATE vehicles
+;;					             1          2
+SQL1_2 = 		SET alive='0' WHERE pid=? AND plate=?
+
+SQL1_INPUTS = 1, 2
+
+;;-------------------------------------------------------------
+
+
+
+;;Selections
+;;--------------------------------------------------------------
+[vehicleGetInfo]
+;;Used for fn_getVehicles.sqf
+
+;;				 1    2     3	      4		5	 6	     7	    8	    9				INPUTS:  1         2            3            4        5 
+SQL1_1 = SELECT id, side, classname, type, pid, alive, active, plate, color FROM vehicles WHERE pid=? AND alive=? AND active=? AND side=? AND type=?;
+
+SQL1_INPUTS = 1, 2, 3, 4, 5
+
+OUTPUT = 1, 2, 3, 4, 5, 6, 7, 8, 9
+
+;;--------------------------------------------------------------
+[vehicleGetInfo2]
+;;Used for fn_spawnVehicle.sqf
+
+;;				 1    2     3	      4		5	 6	     7	    8	    9		10		11		12	13        14 			INPUTS:    1        2 
+SQL1_1 = SELECT id, side, classname, type, pid, alive, active, plate, color, inventory, gear, fuel, damage, blacklist FROM vehicles WHERE id=? AND pid=?;
+
+
+SQL1_INPUTS = 1, 2
+
+OUTPUT = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14
+
+;;--------------------------------------------------------------
+
 
