--- a/@extDB3/sql_custom/altis-life-custom.ini
+++ b/@extDB3/sql_custom/altis-life-custom.ini
@@ -65,7 +65,7 @@ Prepared Statement = false
 SQL1_1 = INSERT INTO players 
 ;;				1          2 	 3     4        5        6             7             8             9         10        11
 SQL1_2 = 		(playerid, name, cash, bankacc, aliases, cop_licenses, med_licenses, civ_licenses, civ_gear, cop_gear, med_gear) 
-SQL1_3 = 		VALUES(?,?,?,?,?,?,?,?,?,?,?)
+SQL1_3 = 		VALUES(?,?,?,?,?,?,?,?,?,?,?);
 
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
 
@@ -74,7 +74,7 @@ SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
 
 SQL1_1 = UPDATE players
 ;;					1          2 	    3          4           5                6			7			8
-SQL1_2 = 		SET name=?, cash=?, bankacc=?, cop_gear=?, cop_licenses=?, cop_stats=?, playtime=? WHERE playerid=?
+SQL1_2 = 		SET name=?, cash=?, bankacc=?, cop_gear=?, cop_licenses=?, cop_stats=?, playtime=? WHERE playerid=?;
 
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8
 
@@ -83,7 +83,7 @@ SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8
 
 SQL1_1 = UPDATE players
 ;;					1          2 	    3          4              5             6			7			8			9				10				11
-SQL1_2 = 		SET name=?, cash=?, bankacc=?, civ_licenses=?, civ_gear=?, arrested=?, civ_stats=?, civ_alive=?, civ_position=?, playtime=? WHERE playerid=?
+SQL1_2 = 		SET name=?, cash=?, bankacc=?, civ_licenses=?, civ_gear=?, arrested=?, civ_stats=?, civ_alive=?, civ_position=?, playtime=? WHERE playerid=?;
 
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 8, 10, 11
 
@@ -92,7 +92,7 @@ SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 8, 10, 11
 
 SQL1_1 = UPDATE players
 ;;					1          2 	    3          4              5             6			7			 8
-SQL1_2 = 		SET name=?, cash=?, bankacc=?, med_licenses=?, med_gear=?, med_stats=?, playtime=? WHERE playerid=?
+SQL1_2 = 		SET name=?, cash=?, bankacc=?, med_licenses=?, med_gear=?, med_stats=?, playtime=? WHERE playerid=?;
 
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 8
 
@@ -107,7 +107,7 @@ SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 8
 
 SQL1_1 = UPDATE players
 ;;					1         		 2 	    
-SQL1_2 = 		SET cash=? WHERE playerid=?
+SQL1_2 = 		SET cash=? WHERE playerid=?;
 
 SQL1_INPUTS = 1, 2
 
@@ -116,7 +116,7 @@ SQL1_INPUTS = 1, 2
 
 SQL1_1 = UPDATE players
 ;;					1         		 2 	    
-SQL1_2 = 		SET bankacc=? WHERE playerid=?
+SQL1_2 = 		SET bankacc=? WHERE playerid=?;
 
 SQL1_INPUTS = 1, 2
 
@@ -125,7 +125,7 @@ SQL1_INPUTS = 1, 2
 
 SQL1_1 = UPDATE players
 ;;					1         		 2 	    
-SQL1_2 = 		SET cop_licenses=? WHERE playerid=?
+SQL1_2 = 		SET cop_licenses=? WHERE playerid=?;
 
 SQL1_INPUTS = 1, 2
 
@@ -134,7 +134,7 @@ SQL1_INPUTS = 1, 2
 
 SQL1_1 = UPDATE players
 ;;					1         		 2 	    
-SQL1_2 = 		SET civ_licenses=? WHERE playerid=?
+SQL1_2 = 		SET civ_licenses=? WHERE playerid=?;
 
 SQL1_INPUTS = 1, 2
 
@@ -143,7 +143,7 @@ SQL1_INPUTS = 1, 2
 
 SQL1_1 = UPDATE players
 ;;					1         		 2 	    
-SQL1_2 = 		SET med_licenses=? WHERE playerid=?
+SQL1_2 = 		SET med_licenses=? WHERE playerid=?;
 
 SQL1_INPUTS = 1, 2
 
@@ -152,7 +152,7 @@ SQL1_INPUTS = 1, 2
 
 SQL1_1 = UPDATE players
 ;;					1         		 2 	    
-SQL1_2 = 		SET cop_gear=? WHERE playerid=?
+SQL1_2 = 		SET cop_gear=? WHERE playerid=?;
 
 SQL1_INPUTS = 1, 2
 
@@ -161,7 +161,7 @@ SQL1_INPUTS = 1, 2
 
 SQL1_1 = UPDATE players
 ;;					1         		 2 	    
-SQL1_2 = 		SET civ_gear=? WHERE playerid=?
+SQL1_2 = 		SET civ_gear=? WHERE playerid=?;
 
 SQL1_INPUTS = 1, 2
 
@@ -170,7 +170,7 @@ SQL1_INPUTS = 1, 2
 
 SQL1_1 = UPDATE players
 ;;					1         		 2 	    
-SQL1_2 = 		SET med_gear=? WHERE playerid=?
+SQL1_2 = 		SET med_gear=? WHERE playerid=?;
 
 SQL1_INPUTS = 1, 2
 
@@ -179,7 +179,7 @@ SQL1_INPUTS = 1, 2
 
 SQL1_1 = UPDATE players
 ;;					1         		 2 	    		3
-SQL1_2 = 		SET civ_alive=?, civ_position=? WHERE playerid=?
+SQL1_2 = 		SET civ_alive=?, civ_position=? WHERE playerid=?;
 
 SQL1_INPUTS = 1, 2, 3
 
@@ -188,7 +188,7 @@ SQL1_INPUTS = 1, 2, 3
 
 SQL1_1 = UPDATE players
 ;;					1         		 2
-SQL1_2 = 		SET arrested=? WHERE playerid=?
+SQL1_2 = 		SET arrested=? WHERE playerid=?;
 
 SQL1_INPUTS = 1, 2
 
@@ -197,7 +197,7 @@ SQL1_INPUTS = 1, 2
 
 SQL1_1 = UPDATE players
 ;;					1         2				3
-SQL1_2 = 		SET cash=?, bankacc=? WHERE playerid=?
+SQL1_2 = 		SET cash=?, bankacc=? WHERE playerid=?;
 
 SQL1_INPUTS = 1, 2, 3
 
@@ -212,7 +212,6 @@ SQL1_INPUTS = 1, 2, 3
 SQL1_1 = SELECT playerid, name FROM players WHERE playerid=?;
 SQL1_INPUTS = 1
 
-Number of Inputs = 1
 OUTPUT = 1, 2
 
 ;;--------------------------------------------------------------
@@ -257,7 +256,7 @@ OUTPUT = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
 SQL1_1 = INSERT INTO vehicles 
 ;;				  1        2       3     4     5       6       7         8      9     10     11
 SQL1_2 = 		(side, classname, type, pid, alive, active, inventory, color, plate, gear, damage) 
-SQL1_3 = 		VALUES(?,?,?,?,?,?,?,?,?,?,?)
+SQL1_3 = 		VALUES(?,?,?,?,?,?,?,?,?,?,?);
 
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
 
@@ -268,7 +267,7 @@ SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
 
 SQL1_1 = UPDATE vehicles
 ;;									1      2 	    3			4
-SQL1_2 = 		SET active='0', fuel=?, damage=? WHERE pid=? AND plate=?
+SQL1_2 = 		SET active='0', fuel=?, damage=? WHERE pid=? AND plate=?;
 
 SQL1_INPUTS = 1, 2, 3, 4
 
@@ -277,7 +276,7 @@ SQL1_INPUTS = 1, 2, 3, 4
 
 SQL1_1 = UPDATE vehicles
 ;;									1     		 2 	    3
-SQL1_2 = 		SET active='1', damage=? WHERE pid=? AND id=?
+SQL1_2 = 		SET active='1', damage=? WHERE pid=? AND id=?;
 
 SQL1_INPUTS = 1, 2, 3
 
@@ -287,7 +286,7 @@ SQL1_INPUTS = 1, 2, 3
 
 SQL1_1 = UPDATE vehicles
 ;;						1         	2			3
-SQL1_2 = 		SET blacklist='0' WHERE id=? AND pid=?
+SQL1_2 = 		SET blacklist='0' WHERE id=? AND pid=?;
 
 SQL1_INPUTS = 1, 2, 3
 
@@ -296,7 +295,7 @@ SQL1_INPUTS = 1, 2, 3
 
 SQL1_1 = UPDATE vehicles
 ;;									1         	2
-SQL1_2 = 		SET blacklist='1' WHERE pid=? AND plate=?
+SQL1_2 = 		SET blacklist='1' WHERE pid=? AND plate=?;
 
 SQL1_INPUTS = 1, 2
 
@@ -306,7 +305,7 @@ SQL1_INPUTS = 1, 2
 
 SQL1_1 = UPDATE vehicles
 ;;									1          2 	  3        4        5            6        
-SQL1_2 = 		SET active='0', inventory=?, gear=?, fuel=?, damage=? WHERE pid=? AND plate=?
+SQL1_2 = 		SET active='0', inventory=?, gear=?, fuel=?, damage=? WHERE pid=? AND plate=?;
 
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6
 
@@ -315,7 +314,7 @@ SQL1_INPUTS = 1, 2, 3, 4, 5, 6
 
 SQL1_1 = UPDATE vehicles
 ;;					  1            2          3
-SQL1_2 = 		SET gear=? WHERE pid=? AND plate=?
+SQL1_2 = 		SET gear=? WHERE pid=? AND plate=?;
 
 SQL1_INPUTS = 1, 2, 3
 
@@ -324,7 +323,7 @@ SQL1_INPUTS = 1, 2, 3
 
 SQL1_1 = UPDATE vehicles
 ;;					  1            2          3
-SQL1_2 = 		SET inventory=? WHERE pid=? AND plate=?
+SQL1_2 = 		SET inventory=? WHERE pid=? AND plate=?;
 
 SQL1_INPUTS = 1, 2, 3
 
@@ -333,7 +332,7 @@ SQL1_INPUTS = 1, 2, 3
 
 SQL1_1 = UPDATE vehicles
 ;;					             1          2
-SQL1_2 = 		SET alive='0' WHERE pid=? AND plate=?
+SQL1_2 = 		SET alive='0' WHERE pid=? AND plate=?;
 
 SQL1_INPUTS = 1, 2
 
@@ -366,5 +365,147 @@ SQL1_INPUTS = 1, 2
 OUTPUT = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14
 
 ;;--------------------------------------------------------------
+
+;; ----------------------
+;;         Gangs 
+;; ----------------------
+
+;;Inserts / Updates
+;;--------------------------------------------------------------
+[gangInsert]
+
+
+SQL1_1 = INSERT INTO gangs 
+;;				  1        2      3
+SQL1_2 = 		(owner, name, members) 
+SQL1_3 = 		VALUES(?,?,?);
+
+
+SQL1_INPUTS = 1, 2, 3
+
+;;--------------------------------------------------------------
+[gangUpdate]
+
+SQL1_1 = UPDATE gangs
+;;					  1            2          3     4
+SQL1_2 = 		SET active=?, owner=?, members=? WHERE id=?;
+
+SQL1_INPUTS = 1, 2, 3, 4
+
+;;-------------------------------------------------------------
+[gangRemove]
+
+SQL1_1 = UPDATE gangs
+;;					  1            2          3     4
+SQL1_2 = 		SET active='0' WHERE id=?;
+
+SQL1_INPUTS = 1
+
+;;-------------------------------------------------------------
+[gangUpdateBank+MaxMembers+Owner]
+
+SQL1_1 = UPDATE gangs
+;;					  1            2          3     4
+SQL1_2 = 		SET bank=?, maxmembers=?, owner=? WHERE id=?;
+
+SQL1_INPUTS = 1, 2, 3, 4
+
+;;-------------------------------------------------------------
+[gangUpdateBank]
+
+SQL1_1 = UPDATE gangs
+;;					  1         2
+SQL1_2 = 		SET bank=? WHERE id=?;
+
+SQL1_INPUTS = 1, 2
+
+;;-------------------------------------------------------------
+[gangUpdateMaxMembers]
+
+SQL1_1 = UPDATE gangs
+;;					  1         2
+SQL1_2 = 		SET maxmembers=? WHERE id=?;
+
+SQL1_INPUTS = 1, 2
+
+;;-------------------------------------------------------------
+[gangUpdateOwner]
+
+SQL1_1 = UPDATE gangs
+;;					  1         2
+SQL1_2 = 		SET owner=? WHERE id=?;
+
+SQL1_INPUTS = 1, 2
+
+;;-------------------------------------------------------------
+[gangUpdateMembers]
+
+SQL1_1 = UPDATE gangs
+;;					  1         2
+SQL1_2 = 		SET members=? WHERE id=?;
+
+SQL1_INPUTS = 1, 2
+
+;;-------------------------------------------------------------
+
+
+
+;;Selections
+;;--------------------------------------------------------------
+[gangName]
+;;fn_insertGang.sqf
+
+SQL1_1 = SELECT id FROM gangs WHERE name=? AND active='1';
+
+SQL1_INPUTS = 1
+
+OUTPUT = 1
+
+;;--------------------------------------------------------------
+[gangFind]
+;;fn_insertGang.sqf
+
+SQL1_1 = SELECT id FROM gangs WHERE members LIKE ? AND active='1';
+
+
+SQL1_INPUTS = 1
+
+OUTPUT = 1
+
+;;--------------------------------------------------------------
+[gangCheckOther]
+;;fn_insertGang.sqf
+;;Check to see if gang has same name.
+
+SQL1_1 = SELECT id, active FROM gangs WHERE name=? AND active='0';
+
+SQL1_INPUTS = 1
+
+OUTPUT = 1
+
+;;--------------------------------------------------------------
+[gangOwnerFind]
+;;fn_insertGang.sqf
+
+SQL1_1 = SELECT id FROM gangs WHERE owner=? AND active='1';
+
+SQL1_INPUTS = 1
+
+OUTPUT = 1
+
+;;--------------------------------------------------------------
+[gangFindInfo]
+;;fn_queryPlayerGang.sqf
+
+SQL1_1 = SELECT id, owner, name, maxmembers, bank, members FROM gangs WHERE active='1' AND members LIKE ?;
+
+SQL1_INPUTS = 1
+
+OUTPUT = 1, 2, 3, 4, 5, 6
+
+;;--------------------------------------------------------------
+
+
+
 
 
