Added House / Container Statements

--- a/@extDB3/sql_custom/altis-life-custom.ini
+++ b/@extDB3/sql_custom/altis-life-custom.ini
@@ -506,6 +506,154 @@ OUTPUT = 1, 2, 3, 4, 5, 6
 ;;--------------------------------------------------------------
 
 
+;; -------------------------------
+;;         Houses / Containers 
+;; -------------------------------
+
+;;Inserts / Updates
+;;--------------------------------------------------------------
+[houseInsert]
+
+SQL1_1 = INSERT INTO houses 
+;;				  1    2     3 
+SQL1_2 = 		(pid, pos, owned) 
+SQL1_3 = 		VALUES(?,?,?);
+
+SQL1_INPUTS = 1, 2, 3
+
+;;--------------------------------------------------------------
+[containerInsert]
+
+SQL1_1 = INSERT INTO containers 
+;;				  1    2       3     	4     	  5       6    7 
+SQL1_2 = 		(pid, pos, classname, inventory, gear, owned, dir) 
+SQL1_3 = 		VALUES(?,?,?,?,?,?,?);
+
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7
+
+;;--------------------------------------------------------------
+[containerDelete1]
+
+SQL1_1 = UPDATE containers
+;;					  							1         2
+SQL1_2 = 		SET owned='0', pos='[]' WHERE pid=? AND pos=? AND owned='1';
+
+SQL1_INPUTS = 1, 2
+
+;;-------------------------------------------------------------
+[containerDelete2]
+
+SQL1_1 = UPDATE containers
+;;											1
+SQL1_2 = 		SET owned='0', pos='[]' WHERE id=?;
+
+SQL1_INPUTS = 1
+
+;;-------------------------------------------------------------
+[houseSell1]
+
+SQL1_1 = UPDATE houses
+;;											1			2
+SQL1_2 = 		SET owned='0', pos='[]' WHERE pid=? AND pos=? AND owned='1';
+
+SQL1_INPUTS = 1, 2
+
+;;-------------------------------------------------------------
+[houseSell2]
+
+SQL1_1 = UPDATE houses
+;;											1
+SQL1_2 = 		SET owned='0', pos='[]' WHERE id=?;
+
+SQL1_INPUTS = 1
+
+;;-------------------------------------------------------------
+[containerUpdateGear]
+
+SQL1_1 = UPDATE containers
+;;					1			2
+SQL1_2 = 		SET gear=? WHERE id=?;
+
+SQL1_INPUTS = 1, 2
+
+;;-------------------------------------------------------------
+[containerUpdateTrunk]
+
+SQL1_1 = UPDATE containers
+;;					1			2
+SQL1_2 = 		SET inventory=? WHERE id=?;
+
+SQL1_INPUTS = 1, 2
+
+;;-------------------------------------------------------------
+
+
+
+
+;;Selections
+;;--------------------------------------------------------------
+[houseGetID]
+
+SQL1_1 = SELECT id FROM houses WHERE pos=? AND pid=? AND owned='1';
+
+SQL1_INPUTS = 1, 2
+
+OUTPUT = 1
+
+;;--------------------------------------------------------------
+[containerGetID]
+
+SQL1_1 = SELECT id FROM containers WHERE pos=? AND pid=? AND owned='1';
+
+SQL1_INPUTS = 1, 2
+
+OUTPUT = 1
+
+;;--------------------------------------------------------------
+[houseFetchContainers]
+
+SQL1_1 = SELECT pid, pos, classname, inventory, gear, dir, id FROM containers WHERE pid=? AND owned='1';
+
+SQL1_INPUTS = 1
+
+OUTPUT = 1, 2, 3, 4, 5, 6, 7
+
+;;--------------------------------------------------------------
+[houseGetPos]
+
+SQL1_1 = SELECT pid, pos FROM houses WHERE pid=? AND owned='1';
+
+SQL1_INPUTS = 1
+
+OUTPUT = 1, 2
+
+;;--------------------------------------------------------------
+[houseCleanContainers]
+
+SQL1_1 = SELECT pid, pos FROM containers WHERE pid=? AND owned='1';
+
+SQL1_INPUTS = 1
+
+OUTPUT = 1, 2
+
+;;--------------------------------------------------------------
+[houseCount]
+
+SQL1_1 = SELECT COUNT(*) FROM houses WHERE owned='1';
+
+SQL1_INPUTS = 0
+;;--------------------------------------------------------------
+[houseInit]
+
+SQL1_1 = SELECT houses.id, houses.pid, houses.pos, players.name FROM houses INNER JOIN players WHERE houses.owned='1' AND houses.pid = players.playerid LIMIT ?,10;
+
+SQL1_INPUTS = 1
+
+OUTPUT = 1, 2, 3, 4
+;;--------------------------------------------------------------
+
+
+
 
 
 
