Wanted Statements Added

--- a/@extDB3/sql_custom/altis-life-custom.ini
+++ b/@extDB3/sql_custom/altis-life-custom.ini
@@ -3,7 +3,7 @@
 Version = 1  
 ;; Used incase there is ever a breaking change, or to inform user in log about a new feature.
 
-Strip Chars = ";[]"
+Strip Chars = "`/\|;{}<>'"
 ;; List of characters to strip out  
 Strip Chars Mode = 0
 ;; 0 = Strip Bad Chars, 1 = Strip + Log Bad Chars, 2 = Return Error & Log Bad Chars  
@@ -651,6 +651,110 @@ SQL1_INPUTS = 1
 
 OUTPUT = 1, 2, 3, 4
 ;;--------------------------------------------------------------
+
+;; -------------------------------
+;;         	  Wanted 
+;; -------------------------------
+
+;;Inserts / Updates
+;;--------------------------------------------------------------
+[wantedInsert]
+
+SQL1_1 = INSERT INTO wanted
+;;				  1    			2     			3 			4		5
+SQL1_2 = 	    (wantedID, wantedName, wantedCrimes, wantedBounty, active) 
+SQL1_3 = 		VALUES(?,?,?,?,?);
+
+SQL1_INPUTS = 1, 2, 3, 4, 5
+
+;;--------------------------------------------------------------
+[wantedUpdate]
+
+SQL1_1 = UPDATE wanted
+SQL1_2 = 		SET wantedCrimes = ?, wantedBounty = wantedBounty + ?, active = '1' WHERE wantedID=?;
+
+SQL1_INPUTS = 1, 2, 3
+
+;;--------------------------------------------------------------
+[wantedUpdateName]
+
+SQL1_1 = UPDATE wanted
+SQL1_2 = 		SET wantedName=? WHERE wantedID=?;
+
+SQL1_INPUTS = 1, 2
+
+;;--------------------------------------------------------------
+[wantedRemove]
+
+SQL1_1 = UPDATE wanted
+SQL1_2 = 		SET active = '0', wantedCrimes = '[]', wantedBounty = '0' WHERE wantedID=?;
+
+SQL1_INPUTS = 1
+
+;;--------------------------------------------------------------
+
+
+
+
+;;Selections
+;;--------------------------------------------------------------
+[wantedFetch]
+
+SQL1_1 = SELECT wantedID, wantedName FROM wanted WHERE active='1' AND wantedID in (?);
+
+SQL1_INPUTS = 1
+
+OUTPUT = 1, 2
+;;--------------------------------------------------------------
+[wantedGetID]
+
+SQL1_1 = SELECT wantedID FROM wanted WHERE wantedID=?;
+
+SQL1_INPUTS = 1
+
+OUTPUT = 1
+;;--------------------------------------------------------------
+[wantedGetCrimes+Bounty]
+
+SQL1_1 = SELECT wantedCrimes, wantedBounty FROM wanted WHERE wantedID=?;
+
+SQL1_INPUTS = 1
+
+OUTPUT = 1, 2
+;;--------------------------------------------------------------
+[wantedGetCrimes+Bounty2]
+
+SQL1_1 = SELECT wantedCrimes, wantedBounty FROM wanted WHERE active='1' AND wantedID=?;
+
+SQL1_INPUTS = 1
+
+OUTPUT = 1, 2
+;;--------------------------------------------------------------
+[wantedBounty]
+
+SQL1_1 = SELECT wantedID, wantedName, wantedCrimes, wantedBounty FROM wanted WHERE active='1' AND wantedID=?;
+
+SQL1_INPUTS = 1
+
+OUTPUT = 1, 2, 3, 4
+;;--------------------------------------------------------------
+[wantedPerson]
+
+SQL1_1 = SELECT wantedID, wantedName, wantedBounty FROM wanted WHERE active='1' AND wantedID=?;
+
+SQL1_INPUTS = 1
+
+OUTPUT = 1, 2, 3
+;;--------------------------------------------------------------
+[wantedName]
+
+SQL1_1 = SELECT wantedName FROM wanted WHERE wantedID=?;
+
+SQL1_INPUTS = 1
+
+OUTPUT = 1
+;;--------------------------------------------------------------
+
 
 
 
