--- a/@extDB3/sql_custom/altis-life-custom.ini
+++ b/@extDB3/sql_custom/altis-life-custom.ini
@@ -1,13 +1,17 @@
 [Default]
 
 Version = 1  
-;; Used incase there is ever a breaking change, or to inform user in log about a new feature.
-
-Strip Chars = "`/\|;{}<>'"
-;; List of characters to strip out  
+Strip Chars = "`/\|;{}<>'" 
 Strip Chars Mode = 0
-;; 0 = Strip Bad Chars, 1 = Strip + Log Bad Chars, 2 = Return Error & Log Bad Chars  
-;;     Note: Logging on works when sending data to database.
+
+;;--------------------------------------------------------------
+;;					Altis-Life-Custom
+;;						Made By
+;;				   GetSomePanda + BoGuu
+;;--------------------------------------------------------------
+
+
+
 
 ;;--------------------------------------------------------------
 
@@ -63,7 +67,6 @@ Prepared Statement = false
 
 
 SQL1_1 = INSERT INTO players 
-;;				1          2 	 3     4        5        6             7             8             9         10        11
 SQL1_2 = 		(playerid, name, cash, bankacc, aliases, cop_licenses, med_licenses, civ_licenses, civ_gear, cop_gear, med_gear) 
 SQL1_3 = 		VALUES(?,?,?,?,?,?,?,?,?,?,?);
 
@@ -73,7 +76,6 @@ SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
 [playerUpdateWest]
 
 SQL1_1 = UPDATE players
-;;					1          2 	    3          4           5                6			7			8
 SQL1_2 = 		SET name=?, cash=?, bankacc=?, cop_gear=?, cop_licenses=?, cop_stats=?, playtime=? WHERE playerid=?;
 
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8
@@ -82,7 +84,6 @@ SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8
 [playerUpdateCiv]
 
 SQL1_1 = UPDATE players
-;;					1          2 	    3          4              5             6			7			8			9				10				11
 SQL1_2 = 		SET name=?, cash=?, bankacc=?, civ_licenses=?, civ_gear=?, arrested=?, civ_stats=?, civ_alive=?, civ_position=?, playtime=? WHERE playerid=?;
 
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 8, 10, 11
@@ -91,22 +92,16 @@ SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 8, 10, 11
 [playerUpdateMedic]
 
 SQL1_1 = UPDATE players
-;;					1          2 	    3          4              5             6			7			 8
 SQL1_2 = 		SET name=?, cash=?, bankacc=?, med_licenses=?, med_gear=?, med_stats=?, playtime=? WHERE playerid=?;
 
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 8
 
 ;;-------------------------------------------------------------
-
 ;;Partial Updates
-;; All to be defined in fn_updatePartial.sqf
-;; vvvvvvvvvv
-
 ;;-------------------------------------------------------------
 [playerUpdateCash]
 
-SQL1_1 = UPDATE players
-;;					1         		 2 	    
+SQL1_1 = UPDATE players 
 SQL1_2 = 		SET cash=? WHERE playerid=?;
 
 SQL1_INPUTS = 1, 2
@@ -114,8 +109,7 @@ SQL1_INPUTS = 1, 2
 ;;-------------------------------------------------------------
 [playerUpdateBank]
 
-SQL1_1 = UPDATE players
-;;					1         		 2 	    
+SQL1_1 = UPDATE players  
 SQL1_2 = 		SET bankacc=? WHERE playerid=?;
 
 SQL1_INPUTS = 1, 2
@@ -123,8 +117,7 @@ SQL1_INPUTS = 1, 2
 ;;-------------------------------------------------------------
 [playerUpdateLicensesWest]
 
-SQL1_1 = UPDATE players
-;;					1         		 2 	    
+SQL1_1 = UPDATE players    
 SQL1_2 = 		SET cop_licenses=? WHERE playerid=?;
 
 SQL1_INPUTS = 1, 2
@@ -132,8 +125,7 @@ SQL1_INPUTS = 1, 2
 ;;-------------------------------------------------------------
 [playerUpdateLicensesCiv]
 
-SQL1_1 = UPDATE players
-;;					1         		 2 	    
+SQL1_1 = UPDATE players    
 SQL1_2 = 		SET civ_licenses=? WHERE playerid=?;
 
 SQL1_INPUTS = 1, 2
@@ -141,8 +133,7 @@ SQL1_INPUTS = 1, 2
 ;;-------------------------------------------------------------
 [playerUpdateLicensesMedic]
 
-SQL1_1 = UPDATE players
-;;					1         		 2 	    
+SQL1_1 = UPDATE players	    
 SQL1_2 = 		SET med_licenses=? WHERE playerid=?;
 
 SQL1_INPUTS = 1, 2
@@ -150,8 +141,7 @@ SQL1_INPUTS = 1, 2
 ;;-------------------------------------------------------------
 [playerUpdateGearWest]
 
-SQL1_1 = UPDATE players
-;;					1         		 2 	    
+SQL1_1 = UPDATE players	    
 SQL1_2 = 		SET cop_gear=? WHERE playerid=?;
 
 SQL1_INPUTS = 1, 2
@@ -159,8 +149,7 @@ SQL1_INPUTS = 1, 2
 ;;-------------------------------------------------------------
 [playerUpdateGearCiv]
 
-SQL1_1 = UPDATE players
-;;					1         		 2 	    
+SQL1_1 = UPDATE players	    
 SQL1_2 = 		SET civ_gear=? WHERE playerid=?;
 
 SQL1_INPUTS = 1, 2
@@ -168,8 +157,7 @@ SQL1_INPUTS = 1, 2
 ;;-------------------------------------------------------------
 [playerUpdateGearMedic]
 
-SQL1_1 = UPDATE players
-;;					1         		 2 	    
+SQL1_1 = UPDATE players	    
 SQL1_2 = 		SET med_gear=? WHERE playerid=?;
 
 SQL1_INPUTS = 1, 2
@@ -187,7 +175,6 @@ SQL1_INPUTS = 1, 2, 3
 [playerUpdateCivArrested]
 
 SQL1_1 = UPDATE players
-;;					1         		 2
 SQL1_2 = 		SET arrested=? WHERE playerid=?;
 
 SQL1_INPUTS = 1, 2
@@ -196,7 +183,6 @@ SQL1_INPUTS = 1, 2
 [playerUpdateCash+Bank].
 
 SQL1_1 = UPDATE players
-;;					1         2				3
 SQL1_2 = 		SET cash=?, bankacc=? WHERE playerid=?;
 
 SQL1_INPUTS = 1, 2, 3
@@ -217,7 +203,6 @@ OUTPUT = 1, 2
 ;;--------------------------------------------------------------
 [playerWestInfo]
 
-;;					1      2     3      4          5           6           7             8        9          10         11         12 
 SQL1_1 = SELECT playerid, name, cash, bankacc, adminlevel, donorlevel, cop_licenses, coplevel, cop_gear, blacklist, cop_stats, playtime FROM players WHERE playerid=?;
 SQL1_INPUTS = 1
 
@@ -226,7 +211,6 @@ OUTPUT = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12
 ;;--------------------------------------------------------------
 [playerCivInfo]
 
-;;			1          2     3      4          5           6           7             8        9             10         11           12         13
 SQL1_1 = SELECT playerid, name, cash, bankacc, adminlevel, donorlevel, civ_licenses, arrested, civ_gear, civ_stats, civ_alive, civ_position, playtime FROM players WHERE playerid=?;
 SQL1_INPUTS = 1
 
@@ -235,7 +219,6 @@ OUTPUT = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13
 ;;--------------------------------------------------------------
 [playerMedicInfo]
 
-;;					1       2    3	    4		  5			  6			   7			8			9			10		 11
 SQL1_1 = SELECT playerid, name, cash, bankacc, adminlevel, donorlevel, med_licenses, mediclevel, med_gear, med_stats, playtime FROM players WHERE playerid=?;
 
 SQL1_INPUTS = 1
@@ -254,7 +237,6 @@ OUTPUT = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
 
 
 SQL1_1 = INSERT INTO vehicles 
-;;				  1        2       3     4     5       6       7         8      9     10     11
 SQL1_2 = 		(side, classname, type, pid, alive, active, inventory, color, plate, gear, damage) 
 SQL1_3 = 		VALUES(?,?,?,?,?,?,?,?,?,?,?);
 
@@ -266,7 +248,6 @@ SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
 [vehicleUpdateActive]
 
 SQL1_1 = UPDATE vehicles
-;;									1      2 	    3			4
 SQL1_2 = 		SET active='0', fuel=?, damage=? WHERE pid=? AND plate=?;
 
 SQL1_INPUTS = 1, 2, 3, 4
@@ -275,7 +256,6 @@ SQL1_INPUTS = 1, 2, 3, 4
 [vehicleUpdateActive2]
 
 SQL1_1 = UPDATE vehicles
-;;									1     		 2 	    3
 SQL1_2 = 		SET active='1', damage=? WHERE pid=? AND id=?;
 
 SQL1_INPUTS = 1, 2, 3
@@ -285,7 +265,6 @@ SQL1_INPUTS = 1, 2, 3
 ;;Used in fn_spawnVehicle
 
 SQL1_1 = UPDATE vehicles
-;;						1         	2			3
 SQL1_2 = 		SET blacklist='0' WHERE id=? AND pid=?;
 
 SQL1_INPUTS = 1, 2, 3
@@ -294,7 +273,6 @@ SQL1_INPUTS = 1, 2, 3
 [vehicleUpdateBlacklist2]
 
 SQL1_1 = UPDATE vehicles
-;;									1         	2
 SQL1_2 = 		SET blacklist='1' WHERE pid=? AND plate=?;
 
 SQL1_INPUTS = 1, 2
@@ -303,8 +281,7 @@ SQL1_INPUTS = 1, 2
 [vehicleUpdateStore]
 ;;Update for storing vehicles.
 
-SQL1_1 = UPDATE vehicles
-;;									1          2 	  3        4        5            6        
+SQL1_1 = UPDATE vehicles     
 SQL1_2 = 		SET active='0', inventory=?, gear=?, fuel=?, damage=? WHERE pid=? AND plate=?;
 
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6
@@ -313,7 +290,6 @@ SQL1_INPUTS = 1, 2, 3, 4, 5, 6
 [vehicleUpdateGear]
 
 SQL1_1 = UPDATE vehicles
-;;					  1            2          3
 SQL1_2 = 		SET gear=? WHERE pid=? AND plate=?;
 
 SQL1_INPUTS = 1, 2, 3
@@ -322,7 +298,6 @@ SQL1_INPUTS = 1, 2, 3
 [vehicleUpdateInventory]
 
 SQL1_1 = UPDATE vehicles
-;;					  1            2          3
 SQL1_2 = 		SET inventory=? WHERE pid=? AND plate=?;
 
 SQL1_INPUTS = 1, 2, 3
@@ -331,7 +306,6 @@ SQL1_INPUTS = 1, 2, 3
 [vehicleDelete]
 
 SQL1_1 = UPDATE vehicles
-;;					             1          2
 SQL1_2 = 		SET alive='0' WHERE pid=? AND plate=?;
 
 SQL1_INPUTS = 1, 2
@@ -345,7 +319,6 @@ SQL1_INPUTS = 1, 2
 [vehicleGetInfo]
 ;;Used for fn_getVehicles.sqf
 
-;;				 1    2     3	      4		5	 6	     7	    8	    9				INPUTS:  1         2            3            4        5 
 SQL1_1 = SELECT id, side, classname, type, pid, alive, active, plate, color FROM vehicles WHERE pid=? AND alive=? AND active=? AND side=? AND type=?;
 
 SQL1_INPUTS = 1, 2, 3, 4, 5
@@ -356,7 +329,6 @@ OUTPUT = 1, 2, 3, 4, 5, 6, 7, 8, 9
 [vehicleGetInfo2]
 ;;Used for fn_spawnVehicle.sqf
 
-;;				 1    2     3	      4		5	 6	     7	    8	    9		10		11		12	13        14 			INPUTS:    1        2 
 SQL1_1 = SELECT id, side, classname, type, pid, alive, active, plate, color, inventory, gear, fuel, damage, blacklist FROM vehicles WHERE id=? AND pid=?;
 
 
@@ -387,7 +359,6 @@ SQL1_INPUTS = 1, 2, 3
 [gangUpdate]
 
 SQL1_1 = UPDATE gangs
-;;					  1            2          3     4
 SQL1_2 = 		SET active=?, owner=?, members=? WHERE id=?;
 
 SQL1_INPUTS = 1, 2, 3, 4
@@ -396,7 +367,6 @@ SQL1_INPUTS = 1, 2, 3, 4
 [gangRemove]
 
 SQL1_1 = UPDATE gangs
-;;					  1            2          3     4
 SQL1_2 = 		SET active='0' WHERE id=?;
 
 SQL1_INPUTS = 1
@@ -405,7 +375,6 @@ SQL1_INPUTS = 1
 [gangUpdateBank+MaxMembers+Owner]
 
 SQL1_1 = UPDATE gangs
-;;					  1            2          3     4
 SQL1_2 = 		SET bank=?, maxmembers=?, owner=? WHERE id=?;
 
 SQL1_INPUTS = 1, 2, 3, 4
@@ -414,7 +383,6 @@ SQL1_INPUTS = 1, 2, 3, 4
 [gangUpdateBank]
 
 SQL1_1 = UPDATE gangs
-;;					  1         2
 SQL1_2 = 		SET bank=? WHERE id=?;
 
 SQL1_INPUTS = 1, 2
@@ -423,7 +391,6 @@ SQL1_INPUTS = 1, 2
 [gangUpdateMaxMembers]
 
 SQL1_1 = UPDATE gangs
-;;					  1         2
 SQL1_2 = 		SET maxmembers=? WHERE id=?;
 
 SQL1_INPUTS = 1, 2
@@ -432,7 +399,6 @@ SQL1_INPUTS = 1, 2
 [gangUpdateOwner]
 
 SQL1_1 = UPDATE gangs
-;;					  1         2
 SQL1_2 = 		SET owner=? WHERE id=?;
 
 SQL1_INPUTS = 1, 2
@@ -441,7 +407,6 @@ SQL1_INPUTS = 1, 2
 [gangUpdateMembers]
 
 SQL1_1 = UPDATE gangs
-;;					  1         2
 SQL1_2 = 		SET members=? WHERE id=?;
 
 SQL1_INPUTS = 1, 2
@@ -515,7 +480,6 @@ OUTPUT = 1, 2, 3, 4, 5, 6
 [houseInsert]
 
 SQL1_1 = INSERT INTO houses 
-;;				  1    2     3 
 SQL1_2 = 		(pid, pos, owned) 
 SQL1_3 = 		VALUES(?,?,?);
 
@@ -525,7 +489,6 @@ SQL1_INPUTS = 1, 2, 3
 [containerInsert]
 
 SQL1_1 = INSERT INTO containers 
-;;				  1    2       3     	4     	  5       6    7 
 SQL1_2 = 		(pid, pos, classname, inventory, gear, owned, dir) 
 SQL1_3 = 		VALUES(?,?,?,?,?,?,?);
 
@@ -535,7 +498,6 @@ SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7
 [containerDelete1]
 
 SQL1_1 = UPDATE containers
-;;					  							1         2
 SQL1_2 = 		SET owned='0', pos='[]' WHERE pid=? AND pos=? AND owned='1';
 
 SQL1_INPUTS = 1, 2
@@ -544,7 +506,6 @@ SQL1_INPUTS = 1, 2
 [containerDelete2]
 
 SQL1_1 = UPDATE containers
-;;											1
 SQL1_2 = 		SET owned='0', pos='[]' WHERE id=?;
 
 SQL1_INPUTS = 1
@@ -553,7 +514,6 @@ SQL1_INPUTS = 1
 [houseSell1]
 
 SQL1_1 = UPDATE houses
-;;											1			2
 SQL1_2 = 		SET owned='0', pos='[]' WHERE pid=? AND pos=? AND owned='1';
 
 SQL1_INPUTS = 1, 2
@@ -562,7 +522,6 @@ SQL1_INPUTS = 1, 2
 [houseSell2]
 
 SQL1_1 = UPDATE houses
-;;											1
 SQL1_2 = 		SET owned='0', pos='[]' WHERE id=?;
 
 SQL1_INPUTS = 1
@@ -571,7 +530,6 @@ SQL1_INPUTS = 1
 [containerUpdateGear]
 
 SQL1_1 = UPDATE containers
-;;					1			2
 SQL1_2 = 		SET gear=? WHERE id=?;
 
 SQL1_INPUTS = 1, 2
@@ -580,7 +538,6 @@ SQL1_INPUTS = 1, 2
 [containerUpdateTrunk]
 
 SQL1_1 = UPDATE containers
-;;					1			2
 SQL1_2 = 		SET inventory=? WHERE id=?;
 
 SQL1_INPUTS = 1, 2
@@ -661,7 +618,6 @@ OUTPUT = 1, 2, 3, 4
 [wantedInsert]
 
 SQL1_1 = INSERT INTO wanted
-;;				  1    			2     			3 			4		5
 SQL1_2 = 	    (wantedID, wantedName, wantedCrimes, wantedBounty, active) 
 SQL1_3 = 		VALUES(?,?,?,?,?);
 
@@ -754,10 +710,3 @@ SQL1_INPUTS = 1
 
 OUTPUT = 1
 ;;--------------------------------------------------------------
-
-
-
-
-
-
-
